--- a/css/artist.css
+++ b/css/artist.css
@@ -4,10 +4,13 @@
 }
 
 .us-h1{
-    margin-top: 20px;
+    margin-top: 48px;
+    margin-bottom: 1px;
     margin-bottom: 10px;
     text-align: center;
 }
+
+
 .us-imgs{
     width: 340px;
     height: 200px;
@@ -41,7 +44,14 @@
     text-align: center;
     gap:20px;
     list-style: none;
-    margin-top: 50px;
+    margin-top: 40px;
+}
+
+.img-row1{
+    margin-top: 110px;
+}
+.img-row-last{
+    margin-bottom: 100px;
 }
 
 .sns-imgs{
@@ -51,12 +61,11 @@
     text-align: center;
     gap:5px;
     list-style: none;
-    margin-top: 5px;
+    margin-bottom: 50px;
 }
 
 
 .footer{
-    margin-top: 200px;
     /*flex-direction: row;*/
     background-color: rgb(34, 33, 33);
     bottom: 0;
