--- a/css/test.css
+++ b/css/test.css
@@ -6,13 +6,13 @@
   
   .swiper-slide {
     /* スライドのサイズを調整、中身のテキスト配置調整、背景色 */
-    color: #ffffff;
+    color: #141111;
     width: 100%;
     height: 100%;
     text-align: center;
-    line-height: 300px;
   }
-  
+
+  /*
   .swiper-slide:nth-child(3n + 1) {
     background-color: #de4439;
   }
@@ -23,7 +23,7 @@
   
   .swiper-slide:nth-child(3n + 3) {
     background-color: #53c638;
-  }
+  }*/
   
   .swiper-pagination-bullet {
     width: 12px !important;
@@ -35,3 +35,24 @@
   .swiper-pagination-bullet:first-child {
     margin: 0 !important;
   }
+
+.swiper--wrapper {
+  position: relative;
+}
+
+
+.swiper-button-prev {
+  position: absolute;
+  top: 4%;
+  left: 35%;
+}
+
+.swiper-button-next {
+  position: absolute;
+  top: 4%;
+  right: 35%;
+}
+
+.swiper{
+  margin-bottom: 0%;
+}
