画像いれた

--- a/css/artist.css
+++ b/css/artist.css
@@ -82,3 +82,19 @@
     gap:100px;
     list-style: none;
 }
+
+.us-icon-img{
+    width: 100px;
+    height: 100px;
+}
+
+.uk-icon-img{
+    width: 85px;
+    height: 85px;
+}
+
+.jp-icon-img{
+    width: 85px;
+    height: 85px;
+}
+
