--- a/css/artist.css
+++ b/css/artist.css
@@ -15,6 +15,11 @@
     width: 340px;
     height: 200px;
     box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
+
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    cursor: pointer;
    
 }
 
@@ -32,9 +37,13 @@
 .sns-imgs{
     width: 50px;
     height: 50px;
-   
+}
 
-
+.sns-img:hover{
+    opacity:0.5;
+	cursor: pointer;
+	position: relative;
+	top: 3px
 }
 
 .imgs-row{
