--- a/css/index.css
+++ b/css/index.css
@@ -35,14 +35,14 @@
     display: flex;
     /*flex-direction: row;*/
     text-align: center;
-    gap:1px;
+    gap: 150px;
     
 }
 
 .imgone{
-    width: 250px;
-    height: 320px;
-    border-radius: 3%;
+  height: 380px;
+  width:  280px;
+  border-radius: 3%;
 }
 
 .footer{
@@ -56,7 +56,7 @@
     height: 100px;
 }
 .insta-img,.x-img,.line-img{
-    margin-top: 30px;
+    margin-top: 5px;
     width: 50px;
     height: 50px;
 }
@@ -73,40 +73,43 @@
     list-style: none;
 }
 
+.swiper-slide {
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 300px;
+  text-align: center;
+  flex-shrink: unset;
+  height: 350px;
+
+}
 
 
 
 /*js-----------------------------------*/
-.swiper-wrapper {
-    /* wrapperのサイズを調整 */
+/*.swiper-wrapper {
     width: 100%;
-    height: 300px !important;
+    height: 100%;
   }
   
   .swiper-slide {
-    /* スライドのサイズを調整、中身のテキスト配置調整、背景色 */
     color: #ffffff;
     width: 100%;
     height: 100%;
     text-align: center;
     line-height: 300px;
     text-align: center;
+    flex-shrink: unset;
+    height: 350px;
   }
   
-  /*
-  .swiper-slide:nth-child(3n + 1) {
-    background-color: #de4439;
+
+  .h2-hobby{
+    margin-top: 5px;
   }
   
-  .swiper-slide:nth-child(3n + 2) {
-    background-color: #fcd500;
-  }
-  
-  .swiper-slide:nth-child(3n + 3) {
-    background-color: #53c638;
-  }
-  
-*/
+
 
   .swiper-pagination-bullets {
     width: 100px;
@@ -121,7 +124,6 @@
   
   .swiper-pagination-bullet:first-child {
     margin: 0 !important;
-  }
+  }*/
   
-  
-  
+ 
