--- a/css/test.css
+++ b/css/test.css
@@ -1,7 +1,11 @@
 body {
   background-image: url(../image/image/download.jpg);
   background-size: 100%;
-}
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
+
 
 .main-img{
   height: 200px;
@@ -55,16 +59,21 @@ width:  10px;
 border-radius: 3%;
 }
 
-.footer{
-  
-  /*flex-direction: row;*/
-  background-color: rgb(34, 33, 33);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
+.imgone:hover{
+opacity:0.5;
+cursor: pointer;
+position: relative;
+top: 3px
 }
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: #44aa33;
+}
+
 .insta-img,.x-img,.line-img{
   margin-top: 5px;
   width: 50px;
