--- a/css/test.css
+++ b/css/test.css
@@ -6,11 +6,8 @@ body {
   }
 
   .main-hobby{
-    height: 900px;
-    background-position: 0px -60px;
-    background-image: url(../image/image/604f6358cd0a4b83989516f724ed8bea.jpeg);
-    background-size: 100%;
-     
+  
+
   }
 
 
@@ -20,7 +17,7 @@ body {
 }
 
 .page-header{
-  background-color: rgb(237, 242, 245);
+  background-color: rgba(237, 242, 245, 0.525);
   height: 90px;
     background-position: -10px -10px;
     background-image: url(../image/image/604f6358cd0a4b83989516f724ed8bea.jpeg);
@@ -49,10 +46,11 @@ body {
 }
 
 .myf{
+  margin-top: 110px;
   font-size: 40px;
   text-align: center;
   margin-bottom: 20px;
-  margin-top: 200px;
+  color: aliceblue;
 }
 
 
@@ -77,17 +75,15 @@ position: relative;
 top: 3px
 }
 
+/*
 footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   background: #44aa33;
-  height: 90px;
-    background-position: -10px -10px;
-    background-image: url(../image/image/604f6358cd0a4b83989516f724ed8bea.jpeg);
-    background-size: 100%;
-}
+  
+}*/
 
 .insta-img,.x-img,.line-img{
   margin-top: 5px;
@@ -98,7 +94,7 @@ footer {
 
 
 .swiper-slide img {
-  margin-top: 300px;
+
   height: 400px;
   width: 300px;
   margin-left: 88px;
@@ -113,17 +109,18 @@ footer {
 
 
   /*footer*/
-
+/*
 .footer{
     
-  /*flex-direction: row;*/
   background-color: rgb(34, 33, 33);
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 100px;
-}
+}*/
+
+
 .insta-img,.x-img,.line-img{
   margin-top: 5px;
   width: 50px;
@@ -133,19 +130,43 @@ footer {
 
   
 
-.footer-ul{
+/*.footer-ul{
   margin-top: 20px;
   justify-content: center;
   display: flex;
-  /*flex-direction: row;*/
   text-align: center;
-  gap:50px;
-  list-style: none;
+  
+ 
 }
   
 footer{
   position: absolute;
   bottom: 0;
+}*/
+
+
+
+.footer-ul{
+  display: flex;
+  text-align: center;
+  gap:50px;
+  list-style: none;
+  height: 90px;
+    background-position: -10px -10px;
+    background-image: url(../image/image/604f6358cd0a4b83989516f724ed8bea.jpeg);
+    background-size: 100%;
 }
 
+.about{
+  font-size: large;
+  color: aliceblue;
+  text-align: center;
+}
 
+.like{
+  height: 900px;
+  background-position: 0px -60px;
+  background-image: url(../image/image/604f6358cd0a4b83989516f724ed8bea.jpeg);
+  background-size: 100%;
+  background-size: 100%;
+}
