--- a/css/artist.css
+++ b/css/artist.css
@@ -6,7 +6,7 @@ body {
     position: relative;
     background-image: url(../image/image/night\ sky2.jpg);
     background-size: 100% 100%;
-    background-color:rgb(95, 16, 181);
+    background-color:rgb(20, 5, 232);
   background-blend-mode:darken;
     }
 
@@ -21,6 +21,40 @@ body {
 .artist{
     list-style: none;
 }
+
+.head-main-nav{
+    display: flex;
+    justify-content: center;
+    gap: 2.5rem;
+    list-style: none;
+    margin-left: 10px;
+  }
+
+.nav-li{
+    margin-bottom: 35px;
+    font-size: 25px;
+    margin-top: 1%;
+    list-style: none;
+    text-decoration: none;
+    color: #380bdc;;;
+  }
+  
+  .nav-h1{
+    margin-right: 50%;
+    color: #380bdc;;
+  }
+  
+  .nav-img{
+    margin-top: 10px;
+    height: 60px;
+    width: 60px;
+  }
+
+
+  
+
+
+
 
 .us-h1{
     margin-top: 48px;
@@ -129,3 +163,15 @@ body {
     width: 100px;
     height: 100px;
 }
+
+
+
+.footer-ul{
+    display: flex;
+    text-align: center;
+    gap:50px;
+    list-style: none;
+    height: 200px;
+      background-image: url(../image/image/wall2.jpeg);
+      background-size: 100%;
+  }
