--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,9 @@
+html{
+  scroll-behavior: smooth;
+}
+
+
+
 body {
   margin: 0;
   padding: 0;
@@ -56,6 +62,7 @@ background-attachment: fixed;
 .nav-h1{
   margin-right: 50%;
   color: #380bdc;;
+  
 }
 
 .nav-img{
