--- a/css/indexjs.css
+++ b/css/indexjs.css
@@ -36,11 +36,15 @@ p{
   }
   
   .box {
+    margin: auto;
+    width: 100%;
     position: absolute;
-    top: 30px;
+    top: 3%;
     left: 0;
-    width: 30px;
-    height: 30px;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     opacity: 0;
     animation: fadeIn 36s forwards;
   }
@@ -55,12 +59,15 @@ p{
   }
 
   .box img {
-    margin-top: 50px;
-    margin-left: 450px;
     width: 550px; /* 幅を300pxに設定 */
-    height: 450px; 
     opacity: 0.5;
 }
+
+
+
+
+
+
 
 @media screen and (max-width: 959px) {
   /* 959px以下に適用されるCSS（タブレット用） */
@@ -69,9 +76,11 @@ p{
    margin-top: 1px;
 }
 
+.box {
+  top:3%;
+}
+
 .box img {
-  margin-top: 50px;
-  margin-left: 200px;
   width: 160px; /* 幅を300pxに設定 */
   height: 160px; 
   opacity: 0.5;
@@ -89,8 +98,6 @@ p{
  }
 
  .box img {
-  margin-top: 50px;
-  margin-left: 200px;
   width: 160px; /* 幅を300pxに設定 */
   height: 160px; 
   opacity: 0.5;
