--- a/css/test.css
+++ b/css/test.css
@@ -113,8 +113,8 @@ margin-top: 100px;
   /* height: 400px; */
   width: 300px;
   border-radius: 3%;
-  height: 300px;
-  margin-left: 100px;
+  height: 400px;
+  margin-left: 18%;
   object-fit: cover;
   }
 
@@ -157,13 +157,17 @@ margin-top: 100px;
   margin-bottom: 0px;
 }
 
-.about-p{
+.about-div{
   font-size: 50px;
   width: 70%;
   margin-left: 14%;
     color: aliceblue;
     text-align: center;
-    background: rgba(56, 56, 56, 0.185);
+    background: rgba(36, 35, 35, 0.42);
+  }
+
+  .abouty-div{
+    
   }
 
 
