--- a/css/test.css
+++ b/css/test.css
@@ -167,6 +167,7 @@ margin-top: 100px;
     color: aliceblue;
     text-align: center;
     background: rgba(36, 35, 35, 0.42);
+    height: 800px;
   }
 
   .abouty-div{
@@ -175,9 +176,34 @@ margin-top: 100px;
 
 
 
+/*hood*/
+.hood-imgs{
+  width: 200px;
+  height: 150;
+}
+
+.swiper--wrapper1 {
+  /* wrapperのサイズを調整 */
+  width: 100%;
+  height: 300px;
+}
+
+.swiper-slide1 {
+  /* スライドのサイズを調整、中身のテキスト配置調整、背景色 */
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 300px;
+  text-align: center;
+}
 
 
 
+
+form{
+  padding-top: 150px;
+}
 
 
 
