--- a/css/sk.css
+++ b/css/sk.css
@@ -1,279 +1,175 @@
+/*us-imgs*/
 
-
-
-
-    @charset "utf-8";
-
-    /*========= レイアウトのためのCSS ===============*/
-    
-    p{
-      text-align: center;
-      margin: 20px 0;
-      font-size:3rem;
-      color: aliceblue;
-    }
-    
-    
-    /*========= 1文字ずつ出現させるためのCSS ===============*/
-    
-    .eachTextAnime span{opacity: 0;}
-    .eachTextAnime.appeartext span{ animation:text_anime_on 2s ease-out forwards; }
-    @keyframes text_anime_on {
-      0% {opacity:0;}
-      100% {opacity:1;}
-    }
-    
-    
-    .eachTextAnime {
-        white-space: pre-line; /* もしくは white-space: pre; */
-        margin-top: 9%;
-        color: #000;
-      -webkit-text-stroke: 2px #380bdc;;
-    }
-    
-    
-    .container {
-        position: relative;
-        width: 100%;
-        height: 200px;
-        background-color: #eee;
-      }
-      
-      .box {
-        margin: auto;
-        width: 100%;
-        position: absolute;
-        top: 2%;
-        left: 0;
-        z-index: 2;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        opacity: 0;
-        animation: fadeIn 36s forwards;
-      }
-      
-      @keyframes fadeIn {
-        0% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
-      }
-    
-      .box img {
-        width: 550px; /* 幅を300pxに設定 */
-        opacity: 0.5;
-    }
-    
-    html{
-      scroll-behavior: smooth;
-    }
-    
-    
-    
-    body {
-      margin: 0;
-      padding: 0;
-      position: relative;
-      background-image: url(../image/image/night\ sky2.jpg);
-      background-size: 100% 100%;
-      background-color:rgb(20, 5, 232);
-    background-blend-mode:darken;
-    background-attachment: fixed;
-      }
-    
-    
-    
-    .head-main-nav{
-      display: flex;
-      justify-content: center;
-      gap: 2.5rem;
-      list-style: none;
-      margin-left: 10px;
-    }
-    
-    .nav-li{
-      margin-bottom: 35px;
-      font-size: 25px;
-      margin-top: 1%;
-      list-style: none;
-      text-decoration: none;
-      color: #380bdc;;;
-    }
-    
-    .nav-h1{
-      margin-right: 50%;
-      
-    }
-    
-    .nav-img{
-      margin-top: 10px;
-      height: 60px;
-      width: 60px;
-    }
-    
-    
-    
-    
-    /* .imgone{
-    height: 10px;
-    width:  10px;
-    border-radius: 3%;
-    } */
-    
-    .imgone:hover{
-    opacity:0.5;
-    cursor: pointer;
-    position: relative;
-    top: 3px
-    }
-    
-    .insta-img,.x-img,.line-img{
-      margin-top: 5px;
-      width: 50px;
-      height: 50px;
-    }
-    
-    
-      /*footer*/
-    
-    .footer{
-      margin-top: 20%;
-      height: 400px;
-      /*  background-image: url(../image/image/wall2.jpeg);*/
-      background-color: black;
-        background-size: 100%;
-    }
-    .footer-ul{
-      display: flex;
-      gap:50px;
-      list-style: none;
-    margin-top: 100px;
-      justify-content: center;
-    }
-    
-    
-    
-    
-    
-    
-    .page-header
-    {
-      height: 600px;
-      background-position: 0px -60px;
-      background-image: url(../image/image/604f6358cd0a4b83989516f724ed8bea.jpeg);
-      background-size: 100%;
-      background-size: 100%;
-      width: 100%;
-    }
-    
-    .like{
-      margin-top: 120px;
-    }
-    
-    
-    
-    
-  
-    
-      .hobby-h2{
-        /* margin-left: 210px; */
-        display: flex;
-        justify-content: center;
-      }
-    
-      .myf{
-        margin-bottom: 80px;
-        font-size: 40px;
-        text-align: center;
-        color: aliceblue;
-      }
-      
-      
-    
-    
-      .hobby-h2{
-        color: aliceblue;
-      }
-    
-    
-    
-    
-    
-    
-    
-    
-    /*about*/
-    
-    
-    
-    .about-h2{
-      color: aliceblue;
-      text-align: center;
-      margin-top: 10%;
-      font-size: 400%;
-      margin-bottom: 0px;
-    }
-    
-    .about-div{
-      font-size: 50px;
-      width: 70%;
-      margin-left: 14%;
-        color: aliceblue;
-        text-align: center;
-        background: rgba(36, 35, 35, 0.42);
-        height: 800px;
-      }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.swiper--wrapper {
-    /* wrapperのサイズを調整 */
-    width: 100%;
-    height: 300px;
+body {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  background-image: url(../image/image/night\ sky2.jpg);
+  background-size: 100% 100%;
+  background-color:rgb(20, 5, 232);
+background-blend-mode:darken;
   }
-  
-  .swiper-slide {
-    /* スライドのサイズを調整、中身のテキスト配置調整、背景色 */
-    color: #ffffff;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    line-height: 300px;
-    text-align: center;
+
+  h1{
+      color: aliceblue;
   }
+
+  h2{
+      color: aliceblue;
+  }
+
+.artist{
+  list-style: none;
+}
+
+.head-main-nav{
+  display: flex;
+  justify-content: center;
+  gap: 2.5rem;
+  list-style: none;
+  margin-left: 10px;
+}
+
+.nav-li{
+  margin-bottom: 35px;
+  font-size: 25px;
+  margin-top: 1%;
+  list-style: none;
+  text-decoration: none;
+  color: #380bdc;;;
+}
+
+.nav-h1{
+  margin-right: 50%;
   
+}
+
+.nav-img{
+  margin-top: 10px;
+  height: 60px;
+  width: 60px;
+}
+
+
+
+
+
+
+.us-h1{
+  margin-top: 48px;
+  margin-bottom: 1px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+
+.us-imgs{
+  width: 340px;
+  height: 200px;
+  box-shadow: 0 10px 25px 0 rgba(95, 94, 94, 0.5);
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  cursor: pointer;
+ 
+}
+
+.us-imgs:hover{
+  opacity:0.5;
+cursor: pointer;
+position: relative;
+top: 3px;
+}
+
+.sns{
+  margin-left: 137px;
+}
+
+.sns-imgs{
+  width: 50px;
+  height: 50px;
+}
+
+.sns-img:hover{
+  opacity:0.5;
+cursor: pointer;
+position: relative;
+top: 3px
+}
+
+.imgs-row{
+  justify-content: center;
+  display: flex;
+  /*flex-direction: row;*/
+  text-align: center;
+  gap:20px;
+  list-style: none;
+  margin-top: 40px;
+}
+
+.img-row1{
+  margin-top: 50px;
+}
+.img-row-last{
+  margin-bottom: 100px;
+}
+
+.sns-imgs{
+  justify-content: center;
+  display: flex;
+  /*flex-direction: row;*/
+  text-align: center;
+  gap:5px;
+  list-style: none;
+  margin-bottom: 50px;
+}
+
+
+.footer{
+  /*flex-direction: row;*/
+  background-color: rgb(34, 33, 33);
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
+
+.footer-ul{
+  justify-content: center;
+  display: flex;
+  /*flex-direction: row;*/
+  text-align: center;
+  gap:100px;
+  list-style: none;
+}
+
+.us-icon-img{
+  width: 130px;
+  height: 130px;
+}
+
+.uk-icon-img{
+  width: 110px;
+  height: 110px;
+}
+
+.jp-icon-img{
+  width: 100px;
+  height: 100px;
+}
+
+.k-icon-img{
+  width: 100px;
+  height: 100px;
+}
+
+
+
+.footer-ul{
+  display: flex;
+  gap:50px;
+  list-style: none;
+  height: 200px;
+  background-image: url(../image/image/wall2.jpeg);
+  background-size: 100%;
+}
