--- a/css/sk.css
+++ b/css/sk.css
@@ -50,69 +50,55 @@ background-blend-mode:darken;
   width: 60px;
 }
 
-
-
-
-
-
-.us-h1{
-  margin-top: 48px;
-  margin-bottom: 1px;
-  margin-bottom: 10px;
+.sk-h2{
   text-align: center;
+  margin-top: 10%;
+  margin-bottom: 7%;
+  font-size: 400%;
+  
 }
 
 
-.us-imgs{
-  width: 340px;
-  height: 200px;
-  box-shadow: 0 10px 25px 0 rgba(95, 94, 94, 0.5);
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-  cursor: pointer;
- 
-}
+.sk-div {
 
-.us-imgs:hover{
-  opacity:0.5;
-cursor: pointer;
-position: relative;
-top: 3px;
-}
-
-.sns{
-  margin-left: 137px;
-}
-
-.sns-imgs{
-  width: 50px;
-  height: 50px;
-}
-
-.sns-img:hover{
-  opacity:0.5;
-cursor: pointer;
-position: relative;
-top: 3px
-}
-
-.imgs-row{
-  justify-content: center;
+  width: 80%;
+  color: aliceblue;
+  text-align: center;
+  background: rgba(36, 35, 35, 0.42);
+  height: 800px;
+  justify-content: center; /* 水平方向の中央揃え */
+  align-items: center; /* 垂直方向の中央揃え */
+  margin: 0 auto;
+  margin-top: 100px;
   display: flex;
-  /*flex-direction: row;*/
-  text-align: center;
-  gap:20px;
-  list-style: none;
-  margin-top: 40px;
 }
 
-.img-row1{
-  margin-top: 50px;
+
+
+.sketer-1{
+  text-align: right;
+  margin-right: 2%;
 }
-.img-row-last{
-  margin-bottom: 100px;
+
+.sketer-2{
+  text-align: left;
+  margin-left: 2%;
 }
+
+.sk-text1{
+  text-align: left;
+  font-size: 90%;
+}
+.sk-text2{
+  text-align: right;
+  font-size: 90%;
+}
+.sk-img-1{
+  width: 80%;
+}
+
+
+
 
 .sns-imgs{
   justify-content: center;
@@ -131,7 +117,7 @@ top: 3px
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 300px;
 }
 
 .footer-ul{
@@ -143,25 +129,13 @@ top: 3px
   list-style: none;
 }
 
-.us-icon-img{
-  width: 130px;
-  height: 130px;
+.insta-img,.x-img,.line-img{
+  margin-top: 5px;
+  width: 50px;
+  height: 50px;
 }
 
-.uk-icon-img{
-  width: 110px;
-  height: 110px;
-}
 
-.jp-icon-img{
-  width: 100px;
-  height: 100px;
-}
-
-.k-icon-img{
-  width: 100px;
-  height: 100px;
-}
 
 
 
@@ -170,6 +144,5 @@ top: 3px
   gap:50px;
   list-style: none;
   height: 200px;
-  background-image: url(../image/image/wall2.jpeg);
   background-size: 100%;
 }
