--- a/css/test.css
+++ b/css/test.css
@@ -160,15 +160,7 @@ margin-top: 100px;
   margin-bottom: 0px;
 }
 
-.about-div{
-  font-size: 50px;
-  width: 70%;
-  margin-left: 14%;
-    color: aliceblue;
-    text-align: center;
-    background: rgba(36, 35, 35, 0.42);
-    height: 800px;
-  }
+
 
   .abouty-div{
     
@@ -177,10 +169,13 @@ margin-top: 100px;
 
 
 /*hood*/
-
-.hood-imgs {
-  width: 1000px;
+.hood-h2{
+  color: aliceblue;
+  text-align: center;
+  font-size: 400%;
+  margin-bottom: 0px;
 }
+
 
 
 
@@ -191,7 +186,27 @@ form{
 
 
 
+.about-line {
+    position: relative; /* Ensure relative positioning for pseudo-elements */
+    padding-bottom: 10px; /* Optional: Add some padding below each section */
+    margin-bottom: 20px; /* Optional: Add margin below each section */
+    height: 800px;
 
+  }
+
+.about:before {
+    content: ''; /* Create a pseudo-element */
+    position: absolute; /* Position relative to the parent */
+    left: 20%; /* Adjust the left position to control the shortening */
+    right: 20%; /* Adjust the right position to control the shortening */
+    bottom: 0; /* Position at the bottom */
+    border-bottom: 1px solid #ccc; /* Short bottom border */
+}
+
+/* Optional: Adjust margins and padding for sections */
+.about:last-child:before {
+    display: none; /* Hide the pseudo-element on the last .about section */
+}
 
 
 
@@ -234,7 +249,7 @@ form{
       .swiper-slide img {
         height: 300px;
         width: 200px;
-        margin-left: 88px;
+        /* margin-left: 88px; */
         }
 
 
