--- a/css/food.css
+++ b/css/food.css
@@ -1,21 +1,51 @@
 /* styles.css */
 
+html{
+    scroll-behavior: smooth;
+  }
+  
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #0d0d0d;
-    color: #fff;
     margin: 0;
     padding: 0;
-}
-
-header {
-    background-image: radial-gradient(circle, #000000, #0a0a0a);
-    color: #fff;
-    text-align: center;
-    padding: 60px 0;
     position: relative;
-    overflow: hidden;
-}
+    background-image: url(../image/image/night\ sky2.jpg);
+    background-size: 100% 100%;
+    background-color:rgb(20, 5, 232);
+  background-blend-mode:darken;
+  background-attachment: fixed;
+    }
+  
+
+  .head-main-nav{
+    display: flex;
+    justify-content: center;
+    gap: 2.5rem;
+    list-style: none;
+    margin-left: 10px;
+  }
+  
+  .nav-li{
+    margin-bottom: 35px;
+    font-size: 25px;
+    margin-top: 1%;
+    list-style: none;
+    text-decoration: none;
+    color: #380bdc;;;
+  }
+  
+  .nav-h1{
+    margin-right: 50%;
+    
+  }
+  
+  .nav-img{
+    margin-top: 10px;
+    height: 60px;
+    width: 60px;
+  }
+  
+
+
 
 .header-content {
     max-width: 800px;
@@ -88,8 +118,8 @@ header {
 }
 
 .btn-details {
-    background-color: #ff9800;
-    color: #333;
+    background-color: #380bdc;
+    color: #fff;
     border: none;
     padding: 10px 20px;
     text-decoration: none;
@@ -99,8 +129,8 @@ header {
 }
 
 .btn-details:hover {
-    background-color: #ff6f00;
-    color: #fff;
+    background-color: #fff;
+    color: #333;
 }
 
 .popup {
@@ -152,7 +182,7 @@ header {
 .popup-title {
     margin-bottom: 20px;
     font-size: 2.5rem;
-    color: #ff9800;
+    color: #380bdc;
 }
 
 .popup-body {
@@ -172,7 +202,7 @@ header {
 }
 
 .food-details h3 {
-    color: #ff9800;
+    color: #fff;
     font-size: 2rem;
     margin-bottom: 10px;
 }
@@ -181,4 +211,9 @@ header {
     color: #ccc;
     font-size: 1.4rem;
     line-height: 1.6;
+}
+
+
+.container{
+    margin-top: 5%;
 }
