--- a/css/movie.css
+++ b/css/movie.css
@@ -227,6 +227,7 @@ html{
     }
   
     .myf{
+      margin-top: 10%;
       margin-bottom: 80px;
       font-size: 40px;
       text-align: center;
