--- a/css/soccer.css
+++ b/css/soccer.css
@@ -28,6 +28,7 @@ body {
     gap: 2.5rem;
     list-style: none;
     margin-left: 10px;
+    margin-top: 0px;
   }
   
   .nav-li{
@@ -45,7 +46,6 @@ body {
   }
   
   .nav-img{
-    margin-top: 10px;
     height: 60px;
     width: 60px;
   }
@@ -67,8 +67,8 @@ section {
 }
 
 h2 {
-    color: #380bdc;
-    border-bottom: 2px solid #380bdc;
+    color: #034694;
+    border-bottom: 2px solid #034694;
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
@@ -87,7 +87,6 @@ ul {
 
 li {
     margin-bottom: 10px;
-    color: #fff;
 }
 
 footer {
