--- a/css/movie.css
+++ b/css/movie.css
@@ -351,11 +351,61 @@ html{
 
   .movie-h2{
     color: rgb(248, 251, 253);
-    font-size: 100%;
+    font-size: 200%;
   }
   
+  .movie-name{
+    color: #fff;
+    font-size: 23px;
+    text-align: left;
+    margin-left: 15px;
+  }
+  .movie-di{
+    color: #fff;
+    font-size: 13px;
+    text-align: left;
+   
+    margin: 0px;
+    margin-left: 15px;
+  }
   
-  
+
+
+/* movie.cssの続き */
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0; 
+  top: 0; 
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.8); 
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+}
+
   
   
   
