--- a/css/movie.css
+++ b/css/movie.css
@@ -232,6 +232,13 @@ html{
       font-size: 40px;
       text-align: center;
       color: aliceblue;
+      color: aliceblue;
+  text-align: center;
+  font-size: 350%;
+  margin-bottom: 0px;
+  color: #000;
+  -webkit-text-stroke: 2px #380bdc;;
+
     }
     
     
@@ -352,6 +359,7 @@ html{
   .movie-h2{
     color: rgb(248, 251, 253);
     font-size: 200%;
+    
   }
   
   .movie-name{
@@ -461,57 +469,6 @@ html{
   
   
   
-    @media screen and (max-width: 980px) {
-      /* 959px以下に適用されるCSS（タブレット用） */
-  
-      .head-main-nav{
-        gap: 1rem;
-        list-style: none;
-        margin-left: 0px;
-      }
-      .nav-li{
-        font-size: 15px;
-        margin-top: 1%;
-        list-style: none;
-        text-decoration: none;
-        color: #dc0bc7;;;
-      }
-  
-      .nav-h1{
-          margin-right: 0%;
-          
-        }
-  
-        .swiper-slide img {
-          height: 300px;
-          width: 200px;
-          /* margin-left: 88px; */
-          }
-  
-  
-  
-          .main-self{
-            margin-top: 0px;
-          }
-  
-          .like{
-            margin-top: 0px;
-          }
-  
-          .head-main-nav{
-            gap: 1rem;
-            margin-left: 0px;
-          }
-          .page-header
-          {
-            height: 300px;
-          }
-  
-  
-  
-    }
-  
-  
   
   
   
@@ -545,6 +502,10 @@ html{
     margin-left: 0px;
   }
   
+  .swiper-slide img {
+    height: 50;
+    width: 100;
+}
   
   
     }
