--- a/css/test.css
+++ b/css/test.css
@@ -17,34 +17,6 @@ background-attachment: fixed;
 
 
 
-.head-main-nav{
-  display: flex;
-  justify-content: center;
-  gap: 2.5rem;
-  list-style: none;
-  margin-left: 10px;
-}
-
-.nav-li{
-  margin-bottom: 35px;
-  font-size: 25px;
-  margin-top: 1%;
-  list-style: none;
-  text-decoration: none;
-  color: #380bdc;;;
-}
-
-.nav-h1{
-  margin-right: 50%;
-  
-}
-
-.nav-img{
-  margin-top: 10px;
-  height: 60px;
-  width: 60px;
-}
-
 
 
 
@@ -112,9 +84,11 @@ top: 3px
 
   .myf{
     margin-bottom: 80px;
-    font-size: 40px;
+    font-size: 350%;
     text-align: center;
     color: aliceblue;
+    color: #000;
+  -webkit-text-stroke: 2px #380bdc;;
   }
   
   
@@ -122,6 +96,9 @@ top: 3px
 
   .hobby-h2{
     color: aliceblue;
+    color: #000;
+    -webkit-text-stroke: 2px #380bdc;;
+    font-size: 250%;
   }
 
 
@@ -138,9 +115,10 @@ top: 3px
 .about-h2{
   color: aliceblue;
   text-align: center;
-  margin-top: 10%;
-  font-size: 400%;
+  font-size: 350%;
   margin-bottom: 0px;
+  color: #000;
+  -webkit-text-stroke: 2px #380bdc;;
 }
 
 
@@ -155,8 +133,10 @@ top: 3px
 .hood-h2{
   color: aliceblue;
   text-align: center;
-  font-size: 400%;
+  font-size: 350%;
   margin-bottom: 0px;
+  color: #000;
+  -webkit-text-stroke: 2px #380bdc;;
 }
 .about-hood{
  
@@ -178,14 +158,7 @@ top: 3px
 
   }
 
-.about:before {
-    content: ''; /* Create a pseudo-element */
-    position: absolute; /* Position relative to the parent */
-    left: 20%; /* Adjust the left position to control the shortening */
-    right: 20%; /* Adjust the right position to control the shortening */
-    bottom: 0; /* Position at the bottom */
-    border-bottom: 1px solid #ccc; /* Short bottom border */
-}
+
 
 /* Optional: Adjust margins and padding for sections */
 .about:last-child:before {
@@ -196,8 +169,10 @@ top: 3px
 .sns-h2{
     color: aliceblue;
     text-align: center;
-    font-size: 400%;
+    font-size: 350%;
     margin-bottom: 0px;
+    color: #000;
+    -webkit-text-stroke: 2px #380bdc;;
   
 }
 
@@ -206,6 +181,8 @@ top: 3px
     border-radius: 10px; /* 角丸にする場合 */
     max-width: 800px;
     margin: 50px auto;
+    max-height: 800px;
+    min-height: 500px;
 }
 
 
@@ -244,7 +221,14 @@ top: 3px
   height: 200px;
 }
 
-
+.qa-h2{
+  color: aliceblue;
+  text-align: center;
+  font-size: 350%;
+  margin-bottom: 0px;
+  color: #000;
+  -webkit-text-stroke: 2px #380bdc;;
+}
 
 
 
@@ -293,7 +277,12 @@ top: 3px
         /* margin-left: 88px; */
         }
 
-
+        .swiper-slide2 img {
+          /* height: 300px;
+          width: 200px;
+          margin-left: 88px; */
+          }
+  
 
         .main-self{
           margin-top: 0px;
@@ -350,6 +339,17 @@ top: 3px
   margin-left: 0px;
 }
 
+.swiper-slide2 img {
+   height: 100px;
+  width: 200px;
+  margin-left: 88px; 
+  }
 
+  .hood-imgs img {
+    width: 150px; /* Full width of the slide */
+    height: 100px; /* Set a specific height */
+    border-radius: 10px; /* Optional */
+    object-fit: cover; /* Maintain aspect ratio */
+  }
 
   }
