--- a/css/soccer.css
+++ b/css/soccer.css
@@ -62,6 +62,8 @@ section {
     padding: 40px;
     margin-bottom: 40px;
     border-radius: 8px;
+  background: rgba(36, 35, 35, 0.42);
+
     border: 5px solid #380bdc; /* 青色のボーダー */
     border-radius: 10px; /* 角丸にする場合 */
 }
@@ -141,7 +143,9 @@ li {
 .hero-content .btn:hover {
     background-color: #ffc20e;
 }
-
+.special-title {
+    color: yellow; /* 文字の色を黄色に設定 */
+}
 
 
   
