--- a/css/test.css
+++ b/css/test.css
@@ -186,6 +186,11 @@ top: 3px
 }
 
 
+.sns-img{
+  width: 18%;
+  height: 18%;
+  border-radius: 20px;
+}
 
 .index-sns-imgs{
   text-align: center;
@@ -195,9 +200,9 @@ top: 3px
 
 
 
-.index-sns-img {
-  width: 120px;
-  height: 120px;
+.snsimg {
+  width: 20px;
+  height: 20px;
   margin: 0 30px; /* Add margin to create space between images */
 }
 
@@ -207,19 +212,6 @@ top: 3px
   justify-content: center;
 }
 
-.index-sns-x{
-  width: 250px;
-  height: 200px;
-}
-.index-sns-applem{
-  
-  width: 250px;
-  height: 200px;
-}
-.index-sns-be{
-  width: 250px;
-  height: 200px;
-}
 
 .qa-h2{
   color: aliceblue;
